--- a/src/website/static/css/screen-specific/xs.css
+++ b/src/website/static/css/screen-specific/xs.css
@@ -5,10 +5,6 @@
             --thumbnail-hover-max-width: 7.5rem;
         }
 
-        .header {
-            align-items: center;
-        }
-
         .header > header-tab {
             display: none;
         }
